--- a/HomeWork 12/index.html
+++ b/HomeWork 12/index.html
@@ -176,8 +176,8 @@
 						Мы с вами свяжемся
 					</div>
 					<form id="form">
-						<input required type="email" placeholder="Ваша почта">
-						<input required type="tel" placeholder="Ваш телефон">
+						<input name='email' required type="email" placeholder="Ваша почта"> <!--добавил поле name='email'-->
+						<input name='tel' required type="tel" placeholder="Ваш телефон"> <!--добавил поле name='tel'-->
 						<button type="submit">Отправить</button>
 					</form>
 				</div>
